--- a/HugoApp/.swiftlint.yml
+++ b/HugoApp/.swiftlint.yml
@@ -1,3 +1,9 @@
+
+identifier_name:
+  excluded: # excluded via string array
+    - id
+    - URL
+    
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
